[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/ent/potion_explosion.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/potion_effect/potion_effect6.png" type="Texture" id=2]
[ext_resource path="res://assets/textures/potion_effect/potion_effect4.png" type="Texture" id=3]
[ext_resource path="res://assets/textures/potion_effect/potion_effect3.png" type="Texture" id=4]
[ext_resource path="res://assets/textures/potion_effect/potion_effect0.png" type="Texture" id=5]
[ext_resource path="res://assets/textures/potion_effect/potion_effect2.png" type="Texture" id=6]
[ext_resource path="res://assets/textures/potion_effect/potion_effect7.png" type="Texture" id=7]
[ext_resource path="res://assets/textures/potion_effect/potion_effect5.png" type="Texture" id=8]
[ext_resource path="res://assets/textures/potion_effect/potion_effect1.png" type="Texture" id=9]

[sub_resource type="SphereShape" id=1]

[sub_resource type="QuadMesh" id=2]
size = Vector2( 2.5, 2.5 )

[sub_resource type="AnimatedTexture" id=3]
flags = 23
frames = 8
fps = 15.0
frame_0/texture = ExtResource( 5 )
frame_1/texture = ExtResource( 9 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 6 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 4 )
frame_3/delay_sec = 0.0
frame_4/texture = ExtResource( 3 )
frame_4/delay_sec = 0.0
frame_5/texture = ExtResource( 8 )
frame_5/delay_sec = 0.0
frame_6/texture = ExtResource( 2 )
frame_6/delay_sec = 0.0
frame_7/texture = ExtResource( 7 )
frame_7/delay_sec = 0.0

[sub_resource type="SpatialMaterial" id=4]
flags_unshaded = true
params_blend_mode = 1
params_cull_mode = 2
params_billboard_mode = 3
params_billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_texture = SubResource( 3 )

[node name="potion_explosion" type="KinematicBody"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="GrowTime" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="ShrinkTime" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 2 )
material/0 = SubResource( 4 )
[connection signal="timeout" from="GrowTime" to="." method="_on_GrowTime_timeout"]
[connection signal="timeout" from="ShrinkTime" to="." method="_on_ShrinkTime_timeout"]
